# experiment_1

./: Cargo.toml  Cross.toml  Docker.aarch64-unknown-linux-gnu  aarch64-unknown-linux-gnu.nix  result  shell.nix
.cargo/: config.toml
.github/workflows/: upload_to_itch.yml
src/: main.rs
src/animation/: mod.rs
src/camera/: mod.rs
src/input/: mod.rs
src/player/: mod.rs  state.rs
