[package]
name = "experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = ["wayland"] }
bevy-inspector-egui = "0.18.3"
bevy_rapier2d = { version = "0.21", features = [
  "debug-render-2d",
  "simd-nightly",
  "parallel",
  "wasm-bindgen",
] }
leafwing-input-manager = { version = "0.9" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
