[package]
name = "experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = [] }
bevy-inspector-egui = "0.18"
bevy_embedded_assets = "0.7"
bevy_pixel_camera = "0.4.0"
bevy_rapier2d = { version = "0.21", features = [
  "debug-render-2d",
  "simd-nightly",
  "parallel",
  "wasm-bindgen",
] }
leafwing-input-manager = { version = "0.9" }
bevy_easings = "0.10"
itertools = "0.10.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
